--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -4,6 +4,10 @@
 body {
   font-size: 14px;
 }
+a {
+  text-decoration: none;
+  color: black;
+}
 .v21_145 {
   width: 100%;
   height: 769px;
@@ -81,7 +85,7 @@ body {
   width: 134px;
   color: rgba(255,255,255,1);
   position: absolute;
-  top: 0px;
+  top: 4px;
   left: 27px;
   font-family: Fira Sans;
   font-weight: SemiBold;
