--- a/style/globals.css
+++ b/style/globals.css
@@ -1,8 +1,8 @@
-@import url('http://fonts.cdnfonts.com/css/gotham');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&display=swap');
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Gotham', sans-serif;
+  font-family: 'Fira Sans', sans-serif;
 }
